# LaneFreeDrive

./: .gitignore  CMakeLists.txt  README.md
python_src/: create_scenarios_TRC2025_mixed.py  create_scenarios_av.py  create_scenarios_human.py  create_scenarios_mixed.py  example_create_scenario.py  parallel_run.py  results_analysis.ipynb  trb_const_config.ini
python_src/Machine Learning/: example_create_scenario_rl.py  rl_based_adaptive_pl.py
python_src/SUMO/cruden_lf/: crudenworld2_v1.1_odr1.4_lf.net.xml  lane_free_route.rou.xml  main.sumocfg
python_src/SUMO/lib/: libtracicpp.lib
python_src/SUMO/share/sumo/tools/libsumo/: libsumo.py  libsumoPYTHON_wrap.cxx
python_src/SUMO_Runs/example_highway_on_off_ramps_scenario/: README.md  additionals.add.xml  config.ini  ramps.rou.xml
python_src/SUMO_Runs/example_ring_road/: config.ini  detector.add.xml  detector_0.xml  detector_1.xml  ring.net.xml  ring.rou.xml  ring.sumocfg
python_src/SUMO_Runs/ring_road_single_edge/: HW.xml  ring.net.xml
python_src/SUMO_Runs/ring_road_trc_2025/: README.txt  detector.add.xml  detector_0.xml  detector_1.xml  ring.rou.xml  trc_2025_default_settings.ini
src/: AdaptivePotentialLines.cpp  AdaptivePotentialLines.h  Boundary.cpp  Boundary.h  Controller.cpp  Controller.h  Flocking.cpp  Flocking.h  LaneFree.cpp  LaneFree.h  LaneFree_linux.h  LaneFree_win.h  PotentialLines.cpp  PotentialLines.h  StripBasedHuman.cpp  StripBasedHuman.h  StripBasedHumanNew.cpp  StripBasedHumanNew.h  config.ini
src/default_config/: default_config.ini
src/lft_plugin_config_files/: default_config.ini
(+4 files in other folders)
